minor fix, add draft README, upd openapi
