# src/main/java/it/gov/pagopa/spontaneouspayment/controller/IPaymentsController.java
@@ -33,7 +33,7 @@ public interface IPaymentsController {
             @ApiResponse(responseCode = "401", description = "Wrong or missing function key.", content = @Content(schema = @Schema())),
             @ApiResponse(responseCode = "409", description = "Conflict: duplicate debt position found.", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class))),
             @ApiResponse(responseCode = "500", description = "Service unavailable.", content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE, schema = @Schema(implementation = ProblemJson.class)))})
-    @PostMapping(value = "/organizations/{organizationfiscalcode}/spontaneouspayment",
+    @PostMapping(value = "/organizations/{organizationfiscalcode}/spontaneouspayments",
             produces = MediaType.APPLICATION_JSON_VALUE,
             consumes = MediaType.APPLICATION_JSON_VALUE)
     ResponseEntity<PaymentPositionModel> createSpontaneousPayment(
